Change queues heading text when player is not the party owner

--- a/src/main/resources/theme/play/team_matchmaking.fxml
+++ b/src/main/resources/theme/play/team_matchmaking.fxml
@@ -87,7 +87,7 @@
                     </columnConstraints>
                 </GridPane>
                 <Separator/>
-                <Label styleClass="h1-tmm, uppercase" text="%teammatchmaking.queueTitle"/>
+                <Label fx:id="queueHeadingLabel" styleClass="h1-tmm, uppercase" text="%teammatchmaking.queueTitle"/>
                 <HBox fx:id="queueBox" spacing="12.0"/>
             </children>
             <padding>
