Add game type description
Fixes #1612
Co-authored-by: Sheikah45 <Sheikah450@gmail.com>
Co-authored-by: axel1200 <alexander.von.trostorff@gmail.com>

--- a/src/main/resources/theme/dual_string_list_cell.fxml
+++ b/src/main/resources/theme/dual_string_list_cell.fxml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.web.WebView?>
 <HBox xmlns:fx="http://javafx.com/fxml/1" fx:id="root" maxWidth="1.7976931348623157E308" spacing="10.0"
       styleClass="dual-string-list-cell" xmlns="http://javafx.com/javafx/11.0.1"
       fx:controller="com.faforever.client.fx.DualStringListCellController">
    <children>
-      <Label fx:id="left" styleClass="left-label"/>
+      <Label fx:id="left" styleClass="left-label">
+         <tooltip>
+            <Tooltip contentDisplay="GRAPHIC_ONLY" showDelay=".5s" hideDelay="2s" showDuration="30s">
+               <graphic>
+                  <WebView fx:id="webViewToolTip" prefHeight="250" prefWidth="300"/>
+               </graphic>
+            </Tooltip>
+         </tooltip>
+      </Label>
       <Label fx:id="right" styleClass="right-label"/>
    </children>
 </HBox>
