--- a/src/main/resources/theme/play/team_matchmaking.fxml
+++ b/src/main/resources/theme/play/team_matchmaking.fxml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.control.ToggleButton?>
-<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <StackPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1"
            fx:controller="com.faforever.client.teammatchmaking.TeamMatchmakingController" fx:id="teamMatchmakingRoot">
     <SplitPane dividerPositions="0.7" >
@@ -59,15 +66,31 @@
                                     </HBox>
                                 </children>
                             </VBox>
-                            <ToggleButton fx:id="uefButton" mnemonicParsing="false" styleClass="uef, icon-button, tmm"
-                                          onAction="#onFactionButtonClicked" selected="true" text=""/>
-                            <ToggleButton fx:id="cybranButton" mnemonicParsing="false" styleClass="cybran, icon-button, tmm"
-                                          onAction="#onFactionButtonClicked" selected="true" text=""/>
-                            <ToggleButton fx:id="aeonButton" mnemonicParsing="false" styleClass="aeon, icon-button, tmm"
-                                          onAction="#onFactionButtonClicked" selected="true" text=""/>
+                            <ToggleButton fx:id="uefButton" mnemonicParsing="false" styleClass="faction-button, tmm"
+                                          onAction="#onFactionButtonClicked" selected="true">
+                                <graphic>
+                                    <Region styleClass="uef-icon"/>
+                                </graphic>
+                            </ToggleButton>
+                            <ToggleButton fx:id="cybranButton" mnemonicParsing="false" styleClass="faction-button, tmm"
+                                          onAction="#onFactionButtonClicked" selected="true">
+                                <graphic>
+                                    <Region styleClass="cybran-icon"/>
+                                </graphic>
+                            </ToggleButton>
+                            <ToggleButton fx:id="aeonButton" mnemonicParsing="false" styleClass="faction-button, tmm"
+                                          onAction="#onFactionButtonClicked" selected="true">
+                                <graphic>
+                                    <Region styleClass="aeon-icon"/>
+                                </graphic>
+                            </ToggleButton>
                             <ToggleButton fx:id="seraphimButton" mnemonicParsing="false"
-                                          styleClass="seraphim, icon-button, tmm"
-                                          onAction="#onFactionButtonClicked" selected="true" text=""/>
+                                          styleClass="faction-button, tmm"
+                                          onAction="#onFactionButtonClicked" selected="true">
+                                <graphic>
+                                    <Region styleClass="seraphim-icon"/>
+                                </graphic>
+                            </ToggleButton>
                         </HBox>
                         <Label fx:id="crownLabel" text="" styleClass="icon" style="-fx-font-size: 2.5em;"
                                AnchorPane.topAnchor="0.0" AnchorPane.leftAnchor="15.0" />
@@ -78,13 +101,17 @@
                     <HBox alignment="CENTER_LEFT" spacing="10.0">
                         <children>
                             <Label styleClass="h1-tmm, uppercase" text="%teammatchmaking.partyTitle"/>
-                            <JFXButton fx:id="invitePlayerButton" mnemonicParsing="false"
-                                       styleClass="tmm, invite-button, uppercase"
-                                       text="%teammatchmaking.invitePlayer" onAction="#onInvitePlayerButtonClicked"/>
-                            <JFXButton fx:id="leavePartyButton" mnemonicParsing="false"
-                                       styleClass="tmm, leave-button, uppercase"
-                                       text="%teammatchmaking.leaveParty" onAction="#onLeavePartyButtonClicked"/>
-                            <Label fx:id="refreshingLabel" styleClass="icon" text="" visible="false"/>
+                            <Button fx:id="invitePlayerButton" mnemonicParsing="false"
+                                    styleClass="tmm, invite-button, uppercase"
+                                    text="%teammatchmaking.invitePlayer" onAction="#onInvitePlayerButtonClicked"/>
+                            <Button fx:id="leavePartyButton" mnemonicParsing="false"
+                                    styleClass="tmm, leave-button, uppercase"
+                                    text="%teammatchmaking.leaveParty" onAction="#onLeavePartyButtonClicked"/>
+                            <Label fx:id="refreshingLabel" visible="false">
+                                <graphic>
+                                    <Region styleClass="refresh-icon"/>
+                                </graphic>
+                            </Label>
                         </children>
                     </HBox>
                     <GridPane fx:id="partyMemberPane" hgap="35" vgap="23">
