--- a/src/main/resources/theme/style.css
+++ b/src/main/resources/theme/style.css
@@ -847,17 +847,17 @@
 }
 
 .toggle-button.faction-button {
-  -fx-background-radius: 3;
-  -fx-border-radius: 3;
-  -fx-border-color: -fx-box-border;
-  -fx-border-width: 1;
-  -fx-padding: 1em;
-  -fx-min-width: 6em;
-  -fx-min-height: 6em;
-  -fx-max-width: 6em;
-  -fx-max-height: 6em;
-  -fx-background-color: -fx-background;
-  -fx-background: -fx-control-inner-background;
+  /*-fx-background-radius: 3;*/
+  /*-fx-border-radius: 3;*/
+  /*-fx-border-color: -fx-box-border;*/
+  /*-fx-border-width: 1;*/
+  /*-fx-padding: 1em;*/
+  /*-fx-min-width: 6em;*/
+  /*-fx-min-height: 6em;*/
+  /*-fx-max-width: 6em;*/
+  /*-fx-max-height: 6em;*/
+  /*-fx-background-color: -fx-background;*/
+  /*-fx-background: -fx-control-inner-background;*/
 }
 
 .toggle-button.faction-button .aeon-icon,
